syntax = "proto3";

package gitpod.experimental.v1;

option go_package = "github.com/gitpod-io/gitpod/components/public-api/go/experimental/v1";

message Pagination {
    // page_size is the maximum number of results to retrieve per page
    int32 page_size = 1;

    // page is the page number of results to retrieve.
    string page = 2;
}
